# re-zero

./: .gitignore  2026-02-14-024107-i-have-a-seperate-claude-right-now-and-like-im-get.txt  CLAUDE.md  PLANNING.md  README.md  logdump.txt  planning-with-claude-yay.txt  training_metrics_chart.py  training_metrics_chart_v2.py  training_metrics_v3_final.py
.claude/: architecture.md
action/: action.yml
cli/: package.json  tsconfig.json
cli/src/: index.ts  types.ts
hardware/drone/: Makefile  README.md  drone.ino
hardware/drone/controller/: README.md  controller.ipynb  drone.py  main.py  pyproject.toml  web.py
hardware/drone/controller/web_static/: index.html
hardware/fpga/: .gitignore  build_ken.tcl
hardware/webcam/: brio_demo.py  brio_sdk.py  brio_server.py  mx_brio_control.py  mx_brio_deep_probe.py  mx_brio_full_scan.py  mx_brio_iokit_uvc.py  mx_brio_live.py  mx_brio_morse.py  mx_brio_probe.py  mx_brio_quick_scan.py  mx_brio_register_dump.json  mx_brio_register_dump.txt  mx_brio_scan_results.json  parse_hid_descriptor.py  uvc_direct.py  whisper_modal.py
inference/: check_weights.py  serve.py
server/: .env.example  CLAUDE.md  main.py  pyproject.toml  railway.toml
server/app/: auth.py  config.py  convex_client.py
server/app/lib/: autumn.py
server/app/routers/: gate.py  gateways.py  scans.py
server/app/sandbox/: orchestrator.py
training/: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_training.sh
training/configs/: glm47v-codevuln.toml  glm4flash-codevuln.toml  glm4flash-network-logs.toml  (+10 more)
web/: CLAUDE.md  package.json  pnpm-lock.yaml
(+124 files in other folders)
