[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "convex>=0.7.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "modal>=1.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]
