[project]
name = "controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.0",
    "numpy>=2.4.2",
    "opencv-python>=4.10.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
